# pikacloud-backend

./: .env.example  Cargo.toml  diesel.toml
migrations/2024-07-04-155148_create_tables/: down.sql  up.sql
src/: cache.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  utils.rs
src/auth/: encrypt.rs  iaaa.rs  lcpu.rs  mod.rs  password.rs
src/clouds/: mod.rs  openstack.rs
src/middleware/: api_user_auth.rs  mod.rs
src/routes/: auth.rs  mod.rs
