[package]
name = "pikacloud-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-session = "0.9.0"
actix-web = "4.8.0"
async-trait = "0.1.80"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = [
    "32-column-tables",
    "chrono",
    "postgres",
    "postgres_backend",
    "uuid",
    "r2d2",
] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
md5 = "0.7.0"
redis = { version = "0.25.4", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
# sqlx = { version = "0.7", features = [
#     "runtime-tokio",
#     "tls-native-tls",
#     "postgres",
#     "chrono",
# ] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "serde",
] }
